# ghosty-agents

./: .gitignore  LICENSE  README.md  env.example.sh  findings.md  findings_2.md  pyproject.toml
.github/workflows/: release.yml
docs/: cli.md  github-distribution.md  runbook-deployment.md  step-0-billing-and-project.md  technical-reference.md
ghosty/: __init__.py  __main__.py  agents.py  bootstrap.py  catalog.py  cli.py  config.py  discover.py  doctor.py  gcloud.py  guided.py  harness.py  harness_browser.py  hermes.py  instructions.py  interactive.py  models.py  ui.py
ghosty/webhook_receiver/: __init__.py  main.py  requirements.txt
scripts/: lib.sh
scripts/bootstrap/: 00-create-project.sh  01-link-billing.sh  02-verify-billing.sh  list-billing-accounts.sh  setup-config.sh
scripts/deploy/: 10-enable-apis.sh  11-service-account.sh  12-network.sh  13-firewall-iap.sh  14-iam-iap.sh  15-create-vm.sh  16-budget-alert.sh  99-teardown.sh  deploy-all.sh  ssh-agent.sh
tests/: conftest.py  test_agents.py  test_bootstrap.py  test_cli.py  test_gcloud.py  test_guided.py  test_harness.py  test_harness_browser.py  test_hermes.py  test_instructions.py  test_interactive.py  test_models.py  test_ui.py
