[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghosty-agents"
version = "0.1.0"
description = "Cross-platform CLI to spin up and manage a fleet of hardened, IAP-only agent VMs on GCP."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ghosty Agents" }]
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "tomli-w>=1.0",
    "questionary>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
ghosty-agents = "ghosty.cli:app"

[tool.setuptools.packages.find]
include = ["ghosty*"]

[tool.setuptools.package-data]
"ghosty.webhook_receiver" = ["requirements.txt", "Procfile"]

[tool.pytest.ini_options]
testpaths = ["tests"]
